Home Page Finally Edited

--- a/app/src/main/res/drawable-v24/header_gradient.xml
+++ b/app/src/main/res/drawable-v24/header_gradient.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="315" android:startColor="#5C3759" android:centerColor="@color/colorNullFragment" android:endColor="@color/colorNullFragment" android:type="linear" />
+            <gradient android:angle="315" android:startColor="#2a2b34" android:centerColor="@color/colorNullFragment" android:endColor="@color/colorNullFragment" android:type="linear" />
         </shape>
     </item>
 </selector>
