--- a/app/src/main/res/layout/container_advice_for_you.xml
+++ b/app/src/main/res/layout/container_advice_for_you.xml
@@ -1,39 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorTransparent"
-    android:layout_gravity="center_horizontal">
+    android:background="@color/colorTransparent">
+
 
     <androidx.cardview.widget.CardView
+        android:layout_margin="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorTransparent"
-        android:layout_gravity="center_horizontal">
+        android:background="#00000000">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/imgAdvice_Album_Cover"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="250dp"
-            android:minHeight="250dp" />
+            <ImageView
+                android:id="@+id/imgAdvice_Album_Cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:minWidth="124dp"
+                android:minHeight="124dp"
+                android:gravity="center_vertical" />
+
+        </LinearLayout>
+
+
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/txtAdviceTitle"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="Albüm yada Playlist adı"
-        android:layout_gravity="center_horizontal"
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
-        android:background="@color/colorTransparent"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_gravity="center">
+        <TextView
+            android:id="@+id/txtAdviceTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category_name"
+            android:textStyle="bold"
+            android:textSize="12sp"
+            android:textColor="@android:color/white"/>
 
-
+    </LinearLayout>
 </LinearLayout>
