--- a/app/src/main/res/layout/homelayoutcardview.xml
+++ b/app/src/main/res/layout/homelayoutcardview.xml
@@ -25,16 +25,14 @@
 
         <TextView
             android:id="@+id/titlecard"
-            android:layout_width="80dp"
+            android:layout_margin="5dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:text="Title"
+            android:gravity="center"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="bold"
-
-
-
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imagecard"
             app:layout_constraintTop_toTopOf="parent" />
